--- a/settings/settings.css
+++ b/settings/settings.css
@@ -1,8 +1,22 @@
 body {
-    background-color: #222;
-    color: #eee;
+    background-color: #fff;
+    color: #303030;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Noto Sans", Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    padding: 24px;
 }
 
 .special-text {
-    color: red;
+    color: #dd2b0e;
+    font-weight: 500;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #1f1f1f;
+        color: #fafafa;
+    }
+    
+    .special-text {
+        color: #ff6347;
+    }
 }
